# metamask-auth

./: LICENSE  README.md
backend/golang/: go.mod  go.sum  verify.go
backend/rust/: Cargo.toml
backend/rust/src/: main.rs
frontend/mithril.js/: index.html
site/: index.html
