[package]
name = "verify-sig"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = "1"
base64 = "0.13"
hex = "0.4"
secp256k1 = { version = "0.20", features = ["recovery"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tiny-keccak = { version = "2.0", features = ["keccak"] }
tokio = { version = "1", features = ["full"] }
warp = "0.3"
